Add JDWP port auto-discovery via Attach API and nonce-verified port scanning
Eliminates the need for users to specify an explicit JDWP address=PORT.
The library now auto-discovers the JDWP port using a resolution chain:
cached port → system property → command-line args → Attach API →
nonce-verified port scan → default fallback.

Key changes:
- JdiHelper: add detectPortViaAttachApi(), discoverJdwpPort() with
  nonce verification, connection caching for discovered ports
- DurableAgent: set jdwpDiscoveryNonce at premain, use
  detectJdwpPortNoDefault() to avoid caching incorrect defaults
- ChildJvm: support auto-assigned JDWP port mode (jdwpPort < 0)
  with jdk.attach module and allowAttachSelf
- EndToEndFreezeRestoreIT: add autoDiscoveryFreezeAndRestore test
- ReadmeDemoIT: switch to auto-discovery to match updated README
- README: document simplified command line with auto-discovery

https://claude.ai/code/session_01JVaEev424m8qmDwGq8FATE